[gd_scene load_steps=6 format=3 uid="uid://ce2tiadvxc3eq"]

[ext_resource type="Texture2D" uid="uid://by3pj775l43je" path="res://assets/sprites/background.png" id="1_qaiie"]
[ext_resource type="Script" path="res://scripts/choose_side.gd" id="1_xr4iu"]
[ext_resource type="Texture2D" uid="uid://cta6hi0mdybf1" path="res://assets/sprites/O.png" id="2_lo5u5"]
[ext_resource type="Texture2D" uid="uid://c7qpk5egryi1q" path="res://assets/sprites/X.png" id="3_kvftc"]
[ext_resource type="FontFile" uid="uid://c58wobc0yqopq" path="res://assets/fonts/PixelOperator8.ttf" id="5_jtkvh"]

[node name="ChooseSide" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xr4iu")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.062, 324)
scale = Vector2(35.9961, 20.25)
texture = ExtResource("1_qaiie")

[node name="ChoiceX" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 224.0
offset_right = 480.0
offset_bottom = 416.0
focus_neighbor_left = NodePath("../ChoiceO")
icon = ExtResource("3_kvftc")
flat = true
expand_icon = true

[node name="ChoiceO" type="Button" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 224.0
offset_right = 864.0
offset_bottom = 416.0
focus_neighbor_right = NodePath("../ChoiceX")
icon = ExtResource("2_lo5u5")
flat = true
expand_icon = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 79.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("5_jtkvh")
text = "Back"

[connection signal="mouse_entered" from="ChoiceX" to="." method="_on_choice_x_mouse_entered"]
[connection signal="mouse_exited" from="ChoiceX" to="." method="_on_choice_x_mouse_exited"]
[connection signal="pressed" from="ChoiceX" to="." method="_on_choice_x_pressed"]
[connection signal="mouse_entered" from="ChoiceO" to="." method="_on_choice_o_mouse_entered"]
[connection signal="mouse_exited" from="ChoiceO" to="." method="_on_choice_o_mouse_exited"]
[connection signal="pressed" from="ChoiceO" to="." method="_on_choice_o_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
